--- a/ MANIFEST.in
+++ b/ MANIFEST.in
@@ -5,6 +5,6 @@ include MANIFEST.in
 include setup.py
 include test_settings.py
 recursive-include demo *
-recursive-include nocaptcha_recaptcha *
+recursive-include google_place_auto_complete_widget *
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
