--- a/ MANIFEST.in
+++ b/ MANIFEST.in
@@ -3,10 +3,8 @@ include LICENSE
 include README.md
 include MANIFEST.in
 include setup.py
-include test_settings.py
-include google_place_auto_complete_widget/static/*
-include google_place_auto_complete_widget/templates/*
-recursive-include demo *
+include google_place_auto_complete_widget/static/google_place_auto_complete_widget/js/widget.js
+include google_place_auto_complete_widget/templates/google_place_auto_complete_widget/widget.html
 recursive-include google_place_auto_complete_widget *
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
