--- a/ MANIFEST.in
+++ b/ MANIFEST.in
@@ -1,10 +1,6 @@
-global-include LICENSE README.md setup.py LICENSE MANIFEST.in
-include LICENSE
-include README.md
+global-include setup.py MANIFEST.in
 include MANIFEST.in
 include setup.py
-include google_place_auto_complete_widget/static/google_place_auto_complete_widget/js/widget.js
-include google_place_auto_complete_widget/templates/google_place_auto_complete_widget/widget.html
 recursive-include google_place_auto_complete_widget *
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
